--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -207,3 +207,22 @@ button {
 .emptyCartText {
 	margin: 0.2rem;
 }
+
+.heartHeaderDiv {
+	position: relative;
+}
+
+.heartHeaderDiv div {
+	background-color: rgb(255, 72, 0);
+	color: white;
+	border-radius: 100%;
+	font-size: 0.8rem;
+	width: 1rem;
+	height: 1rem;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: absolute;
+	top: -0.3rem;
+	right: -0.2rem
+}
