--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -25,17 +25,26 @@
 
 .footerIcon {
 	padding: 0.3rem;
-	font-size: 1.7rem;
+	font-size: 2rem;
 	text-align: center;
 }
 
-.footerChildDiv button {
+.footerIcon:hover {
+	color: rgb(255, 72, 0);
+}
+
+.footerChildDiv a {
 	margin: 0.3rem;
 	color: white;
 	background-color: rgb(33, 121, 69);
 	border: none;
 	text-align: left;
 	padding: 0;
+	text-decoration: none;
+}
+
+.footerChildDiv a:hover {
+	color: rgb(255, 72, 0);
 }
 
 .footerChildDiv p {
@@ -43,9 +52,16 @@
 	margin: 0.3rem;
 }
 
+.footerChildDiv span:hover {
+	color: rgb(255, 72, 0);
+}
+
 .headText {
+	font-size: 1.1rem;
+	font-weight: 600;
 	margin: 0rem;
-	text-decoration: underline;
+	margin-bottom: 1rem;
+	text-decoration: underline 0.3rem white solid;
 }
 
 .footerPic {
