--- a/src/styles/News.css
+++ b/src/styles/News.css
@@ -53,3 +53,35 @@
 	width: 100%;
 	justify-content: left;
 }
+
+.newsLink {
+	color: black;
+	text-decoration: none;
+	margin: 1.5rem 0;
+}
+
+.newsLink:hover {
+	color: rgb(255, 72, 0);
+}
+
+.newsLinkHeader {
+	font-size: 0.8rem;
+	margin: 0;
+	color: black;
+	text-decoration: none;
+}
+
+.newsLinkHeader:hover {
+	color: rgb(255, 72, 0);
+}
+
+.newsLinkImage:hover {
+	opacity: 0.8;
+}
+
+.newsDateText {
+	color: gray;
+	margin: 0;
+	display: flex;
+	align-items: center;
+}
