--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -310,3 +310,12 @@
 	background-color: white;
 	border-radius: 100%;
 }
+
+.homeNewsLink {
+	text-decoration: none;
+}
+
+.homeNewsLink h1 {
+	color: black;
+	font-size: 1.1rem;
+}
