--- a/src/styles/ProductDetails.css
+++ b/src/styles/ProductDetails.css
@@ -1,5 +1,6 @@
 .productDetailPageDiv {
 	margin: 0.5rem;
+	margin-bottom: 5rem;
 }
 
 .detailDiv {
@@ -27,7 +28,7 @@
 }
 
 .cartAddButton {
-	background-color: rgb(55, 196, 50);
+	background-color: rgb(33, 121, 69);
 	color: white;
 	border: none;
 	border-radius: 0.5rem;
@@ -37,6 +38,10 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+}
+
+.cartAddButton:hover {
+	opacity: 0.8;
 }
 
 .missingItem {
